[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "las-utils"
version = "0.1.0"
description = "Utilities for working with LAS files (streaming voxel thinning)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "laspy>=2.5.3",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
las-thin = "las_utils.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
